--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,16 @@
   </div>
 </div>
 
+<div class="hero-image-mobile">
+  
+  </div>
+</div>
+
+<div class="hero-text-mobile">
+  <h1>Shine On</h1> 
+  <h3>September 22-25 <br> 2023</h3>
+  <button class="hero-button">Learn More</button>
+    </div>
 
 
 <div class="lineup-container">
