--- a/Index.html
+++ b/Index.html
@@ -110,15 +110,16 @@
 </div>
 
 <div class="homepage">
-  <div class="row">
-  <div class="column">
-<h2>Experiences</h2>
-<p class="homepage-text">Between sets explore what Firefly has to offer ranging from high end shopping, gourmet food, pride parades, games, and more.</p>
-<button>Learn More</button>
-</div>
+  <div class="row row-reverse">
+
 <div class="column_2">
   <img class="homepage-img" src="Images/Home Page Experiences.png">
 </div>
+<div class="column">
+  <h2>Experiences</h2>
+  <p class="homepage-text">Between sets explore what Firefly has to offer ranging from high end shopping, gourmet food, pride parades, games, and more.</p>
+  <button>Learn More</button>
+  </div>
 
 </div>
 </div>
